caculate sum html  code added

--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
     </head>
     <body>
         
+        <input type="text" id="text_num1"  placeholder="Enter number 1 here"/> <br/>
+        <input type="text" id="text_num2"  placeholder="Enter number 2 here"/> <br/>
+        <p id="text_sum">Sum of given Numbers is : </p> <br/>
+        <button type="button" onclick="calculateSum()">Calculate Sum</button>
+        <button type="button" onclick="resetSum()">Reset Sum</button>
+
+
+
     </body>
 </html>
