--- a/index.html
+++ b/index.html
@@ -60,7 +60,20 @@
         <button type="button" onclick="resetSum()"class="btn_action">Reset Sum</button>
     </div>
 
-
+    <script>
+        const inputBox1 = document.getElementById("num1");
+        const inputBox2 = document.getElementById("num2");
+        const answertText = document.getElementById("answer");
+  
+        function calculateSum() {
+          const val1 = parseInt(inputBox1.value);
+          const val2 = parseInt(inputBox1.value);
+          const sum = val1 + val2;
+          answertText.innerText = `Answer : ${sum}`;
+        }
+  
+       
+      </script>
 
     </body>
 </html>
