--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
           const sum = val1 + val2;
           answertText.innerText = `Answer : ${sum}`;
         }
+        function resetSum() {
+          inputBox1.value = " ";
+          inputBox2.value = " ";
+          answertText.innerText = `Answer :`;
+        }
   
        
       </script>
