--- a/index.html
+++ b/index.html
@@ -61,20 +61,20 @@
     </div>
 
     <script>
-        const inputBox1 = document.getElementById("num1");
-        const inputBox2 = document.getElementById("num2");
-        const answertText = document.getElementById("answer");
+        const input1 = document.getElementById("text_num1");
+        const input2 = document.getElementById("text_num2");
+        const resultText = document.getElementById("text_sum");
   
         function calculateSum() {
-          const val1 = parseInt(inputBox1.value);
-          const val2 = parseInt(inputBox1.value);
+          const val1 = parseInt(input1.value || 0);
+          const val2 = parseInt(input2.value || 0);
           const sum = val1 + val2;
-          answertText.innerText = `Answer : ${sum}`;
+          resultText.innerText = `Sum of Numbers is : ${sum}`;
         }
         function resetSum() {
-          inputBox1.value = " ";
-          inputBox2.value = " ";
-          answertText.innerText = `Answer :`;
+          input1.value = " ";
+          input2.value = " ";
+          resultText.innerText = `Sum of Numbers is :`;
         }
   
        
