text _matcher html code added

--- a/text_matcher.html
+++ b/text_matcher.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>String Comparator </title>
         <style></style>
     </head>
-    
+    <body>
+        <h1>String Comparator </h1>
+        <h2>Here, Enter text and check text matches.Let's,Go 🙂👍 </h2>
+        <div>
+        <input type="text" id="text1"/>
+        <input type="text" id="text2"/>
+        <p class="match_text" id="match_result"></p>
+    </div>
+    </body>
+
 </html>
