css styling updated

--- a/text_matcher.html
+++ b/text_matcher.html
@@ -24,6 +24,7 @@
                 align-content: space-around;
                 background-color: #5dbea3;
                 border:none;
+                border-radius: 5px;
 
             }
             .text_style:hover{
