string comprator likd aded

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 box-shadow: 0 0 2px 2px grey;
             }
 
-
+     
          </style>
     </head>
     <body>
@@ -79,6 +79,6 @@
   
        
       </script>
-
+    <a href="./text_matcher.html">Go to String Comparator link</a>
     </body>
 </html>
